# RainbowGrades

./: .gitignore  CMakeLists.txt  MakefileHelper  README.md  RG_version.json  constants_and_globals.h  exceptions.h  grade.cpp  grade.h  gradeable.cpp  gradeable.h  iclicker.cpp  main.cpp  output.cpp  section.cpp  section.h  string_utility.h  student.cpp  student.h  submini_polls.cpp  submini_polls.h  table.cpp  table.h  track_Rainbow_version.py  zone.cpp
.github/workflows/: release.yml
test/: CMakeLists.txt  grade.cpp  gradeable.cpp  student.cpp  unit_test.cpp
